<resources>
    <string name="app_name">3D Electronics</string>
    <string name="product_image" translatable="false">product image</string>
    <string name="out_of_stock">Sold out</string>
    <string name="search">Search ...</string>
    <string name="wishlist">WishList</string>
    <string name="cart">Cart</string>
    <string name="total">Total:</string>
    <string name="total_price">Total :</string>
    <string name="sold_out">Sold Out</string>
    <string name="dollar_sign" translatable="false">$</string>
    <string name="about_part1">We started our journey in the year 1998 in the Hay Al-jameaa street under the name of the three dimensions’3D in the Rasheed Commercial Complex, and the name of the scompany  was inspired by the revolution in visual designs andelectronic games from the two dimensions 2D to the 3D dimensions and it was at its rise at that time. \n\nAnd since then,the company sponsor all the kinds of technology from computers, laptops and tech supplements.The company moved to the Al-senaa street in 2004. \n\nWe have a long-term experience and a good reputation in thefield despite of all the challenges the country is going through and the difficulties ofproviding the finestproducts quickly with best quality and price. The office is branch of the Al-Itjah Althalith for electronics andcommercial agencies.The company is officially recorded in Iraq with same name and has its branches in Dubai, Emirates and Shenzhen China.  \n\nOur company is a major supplier of computer components, peripherals and accessories to all parts of Iraq.We also provide to many of the main points of sale distributed throughout Iraq, end users, students,public and private sector companies, and education platforms, high quality products and services at the most reasonable prices.The Third Dimension Electronics Company was established in Baghdad in 1998 based on a goal and determination at the time toreach today’s experience and position in the world of electronics and computers, to provide computer products and services toindividuals and companies of high quality and lower price and provide the necessary after-sales support with guarantees.Our company is a major importer, distributor and single seller in Iraq. The number of the company semployees is (38) employees distributed between management, marketing, sales and technicians.They have a strong base of knowledge and experience in the information technology sector, and they do everything they have to satisfy the customer.</string>
    <string name="address">Industry Street - opposite the University of Technology - Al-Numan Complex.</string>
    <string name="add">Add</string>
    <string name="product_name">Product Name</string>
    <string name="aboutTitle">About</string>
    <string name="email" translatable="false">3d@3d-iraq.com</string>
    <string name="facebook" translatable="false">facebook.com/3delctronics</string>
    <string name="phone_number" translatable="false">+9647700612084</string>
    <string name="categories">Categories</string>
    <string name="wish_list">Wish List</string>
    <string name="our_vendors">Our Vendors</string>
    <string name="other_products">Other Products</string>
    <string name="contact_us">Contact us</string>
    <string name="home">Home</string>
    <string name="search_word">search</string>
    <string name="see_more">See More</string>
    <string name="best_seller">Best Seller</string>
    <string name="pieces">Pieces</string>
    <string name="microphone">Microphones</string>
    <string name="cable_and_adapter">Cable and Adapter</string>
    <string name="_case">Case</string>
    <string name="drawing_tablet">Drawing Tablet</string>
    <string name="cpu">Cpu</string>
    <string name="graphics_card">Graphics Card</string>
    <string name="case_fan">Case Fan</string>
    <string name="controllers_simulators">Controllers and Simulators</string>
    <string name="replacement_ear_pads">Replacement Ear Pads</string>
    <string name="laptop_fan">Laptop Fan</string>
    <string name="headset">Headset</string>
    <string name="storage_and_memory">Storage and Memory</string>
    <string name="extrernal_hard">External Storage</string>
    <string name="gaming_chair_table">Gaming Chairs and Tables</string>
    <string name="laptop">Laptop</string>
    <string name="webcam">Webcam</string>
    <string name="monitor_stand">Monitor Stand</string>
    <string name="power_products">Ups Products</string>
    <string name="power_supply">Power Supply</string>
    <string name="flash_drive">Flash Drives</string>
    <string name="mouse">Mouses</string>
    <string name="keyboard">Keyboard</string>
    <string name="motherboard">Motherboard</string>
    <string name="mouse_pad">Mouse Pad</string>
    <string name="tablet_and_mobile">Tablet and Mobile</string>
    <string name="monitor">Monitors</string>
    <string name="other_items">Other Items</string>
    <string name="sound_device">Sound Device</string>
    <string name="suggested_setup">Suggested Setups</string>
    <string name="stream_tools">Stream Tools</string>
    <string name="coolers">Coolers</string>
    <string name="pc_speakers">Pc Speakers</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delivery_fees">Delivery Fees:</string>
    <string name="pay_now">Pay Now</string>
    <string name="please_fill_in_your_information">please fill in your information</string>
    <string name="full_name">Full Name</string>
    <string name="company_name">Company Name</string>
    <string name="if_you_are_a_company_owner"><font size="12">If you are a company owner</font></string>
    <string name="governorate">Governorate</string>
    <string name="region_name">Region Name</string>
    <string name="nearest_point_to_you">Nearest point to you</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="_964_xxx_xxxx"><font size="12">+07xx - xxx - xxxx</font></string>
    <string name="notes">Notes</string>
    <string name="submit_your_order">Submit Your Order</string>
    <string name="notes_about_your_order"><font size="12">notes about your order</font></string>
    <string name="your_order_have_been_successfully_received">your order have been successfully received</string>
    <string name="an_error_has_occurred">an error has occurred</string>
    <string name="follow_your_order">Follow your order</string>
    <string name="ok">OK</string>
    <string name="success">SUCCESS</string>
    <string name="fail">FAIL</string>
    <string name="close">close</string>
    <string name="phone_number_should_be_11_digit">phone number should be 11 digit</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="enter_your_region_name">enter your region name</string>
    <string name="invalid_information">invalid information</string>
    <string name="enter_your_phone_number">Phone Number</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="order_day">order day:</string>
    <string name="hello">Hello, </string>
    <string name="your_order_is">Your Order Is</string>
    <string name="check">Check</string>
    <string name="continuee">Continue</string>

    <string-array name="governorates">
        <item>Baghdad</item>
        <item>Baghdad Outskirts</item>
        <item>Basra</item>
        <item>Najaf</item>
        <item>Maysan</item>
        <item>Dhi Qar</item>
        <item>Al-Qadisiyyah</item>
        <item>Muthanna</item>
        <item>Wasit</item>
        <item>Karbala</item>
        <item>Babil</item>
        <item>Al Anbar</item>
        <item>Diyala</item>
        <item>Saladin</item>
        <item>Erbil</item>
        <item>Kirkuk</item>
        <item>Sulaymaniyah</item>
        <item>Halabja</item>
        <item>Nineveh</item>
        <item>Duhok</item>
    </string-array>

</resources>